style: prevent featured project image from stretching

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -98,9 +98,10 @@
 
 .featured-project-description {
 	font-size: min(1.125rem, 3.5vw);
+	line-height: 1.625rem;
 	padding-inline: 1.5rem;
 	max-width: 50ch;
-	text-align: justify;
+	/* text-align: justify; */
 }
 
 .skills-list.projects {
@@ -121,31 +122,14 @@
 
 .featured-project-image {
 	width: 100%;
-	height: 100%;
 	border-radius: 10px;
 	box-shadow: 1rem 1rem var(--bg-secondary);
 	transition: 0.3s ease;
-}
-
-.overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	border-radius: 10px;
-	background-color: var(--bg-tertiary);
-	opacity: 0.5;
-	pointer-events: none;
-	transition: 0.3s ease;
-}
-
-.featured-project-image-wrapper:hover .overlay {
-	transform: translate(-0.5rem, -0.5rem);
-	opacity: 0;
+	opacity: 0.75;
 }
 
 .featured-project-image-wrapper:hover .featured-project-image {
+	opacity: 1;
 	transform: translate(-0.5rem, -0.5rem);
 	box-shadow: 2rem 2rem var(--bg-secondary);
 }
